[metadata]
name = DoSser
version = 1.0
author = Joseph Whalley
author_email = 19095271@stu.mmu.ac.uk
description = A Python 3 based layer 4 denial of service tool.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True